ansible/files/catalog-service.yml
apiVersion: v1
kind: Service
metadata:
  name: catalog
  labels:
    app: catalog
spec:
  ports:
  - name: http
    port: 8080
  selector:
    app: catalog
