ansible/files/gateway-service.yml
apiVersion: v1
kind: Service
metadata:
  name: gateway
  labels:
    app: gateway
spec:
  ports:
  - name: http
    port: 8080
  selector:
    app: gateway
