ansible/files/gateway-spring-service.yml
apiVersion: v1
kind: Service
metadata:
  name: gateway-spring
  labels:
    app: gateway-spring
spec:
  ports:
  - name: http
    port: 8080
  selector:
    app: gateway-spring
