ansible/files/gateway-vertx-service.yml
apiVersion: v1
kind: Service
metadata:
  name: gateway-vertx
  labels:
    app: gateway-vertx
spec:
  ports:
  - name: http
    port: 8080
  selector:
    app: gateway-vertx
