ansible/files/inventory-service.yml
apiVersion: v1
kind: Service
metadata:
  name: inventory
  labels:
    app: inventory    
spec:
  ports:
  - name: http
    port: 8080
  selector:
    app: inventory
