ansible/files/web-service.yml
apiVersion: v1
kind: Service
metadata:
  name: web
  labels:
    app: web
spec:
  ports:
  - name: http
    port: 8080
  selector:
    app: web
