ansible/files/web-spring-service.yml
apiVersion: v1
kind: Service
metadata:
  name: web-spring
  labels:
    app: web-spring
spec:
  ports:
  - name: http
    port: 8080
  selector:
    app: web-spring
