ansible/files/web-vertx-service.yml
apiVersion: v1
kind: Service
metadata:
  name: web-vertx
  labels:
    app: web-vertx
spec:
  ports:
  - name: http
    port: 8080
  selector:
    app: web-vertx
