ansible/files/ingress-routes.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: coolstore-ingress
  annotations:
    kubernetes.io/ingress.class: "istio"
spec:
  rules:
  - http:
      paths:
      - path: /api/.*
        backend:
          serviceName: gateway
          servicePort: http
      - path: /.*
        backend:
          serviceName: web
          servicePort: http
